force-app/main/default/objects/pharos__Log__c/fields/Affected_Module__c.field-meta.xml
<CustomField>
    <fullName>Affected_Module__c</fullName>
    <label>Affected Module</label>
    <length>255</length>
    <type>Text</type>
</CustomField>