force-app/main/default/objects/pharos__Log__c/fields/Classification_AreaType__c.field-meta.xml
<CustomField>
    <fullName>Classification_AreaType__c</fullName>
    <label>Classification AreaType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>