force-app/main/default/objects/pharos__Log__c/fields/DmlMessage__c.field-meta.xml
<CustomField>
    <fullName>DmlMessage__c</fullName>
    <label>DmlMessage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>