force-app/main/default/objects/pharos__Log__c/fields/DmlStatusCode__c.field-meta.xml
<CustomField>
    <fullName>DmlStatusCode__c</fullName>
    <label>DmlStatusCode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>