force-app/main/default/objects/pharos__Log__c/fields/Error_Classification_ErrorKey__c.field-meta.xml
<CustomField>
    <fullName>Error_Classification_ErrorKey__c</fullName>
    <label>Error Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>