force-app/main/default/objects/pharos__Log__c/fields/ErrorCategory__c.field-meta.xml
<CustomField>
    <fullName>ErrorCategory__c</fullName>
    <label>Error Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>pharos_Error_Category</valueSetName>
    </valueSet>
</CustomField>