force-app/main/default/objects/pharos__Log__c/fields/ErrorPriority__c.field-meta.xml
<CustomField>
    <fullName>ErrorPriority__c</fullName>
    <label>Error Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>pharos_Priority</valueSetName>
    </valueSet>
</CustomField>