force-app/main/default/objects/pharos__Log__c/fields/ErrorSeverity__c.field-meta.xml
<CustomField>
    <fullName>ErrorSeverity__c</fullName>
    <label>Error Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>pharos_Severity</valueSetName>
    </valueSet>
</CustomField>