force-app/main/default/objects/pharos__Log__c/fields/ErrorSource__c.field-meta.xml
<CustomField>
    <fullName>ErrorSource__c</fullName>
    <label>Error Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>pharos_Error_Source</valueSetName>
    </valueSet>
</CustomField>