force-app/main/default/objects/pharos__Log__c/fields/ErrorType__c.field-meta.xml
<CustomField>
    <fullName>ErrorType__c</fullName>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>pharos_Error_Type</valueSetName>
    </valueSet>
</CustomField>