force-app/main/default/objects/pharos__Log__c/fields/HttpMethod__c.field-meta.xml
<CustomField>
    <fullName>HttpMethod__c</fullName>
    <label>HttpMethod</label>
    <length>20</length>
    <type>Text</type>
</CustomField>