force-app/main/default/objects/pharos__Log__c/fields/HttpResponseBody__c.field-meta.xml
<CustomField>
    <fullName>HttpResponseBody__c</fullName>
    <label>HttpResponseBody</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>