force-app/main/default/objects/pharos__Log__c/fields/HttpStatusCode__c.field-meta.xml
<CustomField>
    <fullName>HttpStatusCode__c</fullName>
    <label>HttpStatusCode</label>
    <length>3</length>
    <type>Text</type>
</CustomField>