force-app/main/default/objects/pharos__Log__c/fields/HttpStatusName__c.field-meta.xml
<CustomField>
    <fullName>HttpStatusName__c</fullName>
    <label>HttpStatusName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>