force-app/main/default/objects/pharos__Log__c/fields/ID_ERP__c.field-meta.xml
<CustomField>
    <fullName>ID_ERP__c</fullName>
    <label>Account ID in ERP</label>
    <length>40</length>
    <type>Text</type>
</CustomField>