force-app/main/default/objects/pharos__Log__c/fields/Log_Source__c.field-meta.xml
<CustomField>
    <fullName>Log_Source__c</fullName>
    <label>Log Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>