force-app/main/default/objects/pharos__Log__c/fields/MessageSource__c.field-meta.xml
<CustomField>
    <fullName>MessageSource__c</fullName>
    <label>Message Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>IT-Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>