force-app/main/default/objects/pharos__Log__c/fields/ObjectLink__c.field-meta.xml
<CustomField>
    <fullName>ObjectLink__c</fullName>
    <formula>&apos;https://interpipe.lightning.force.com/lightning/r/&apos; + pharos__Related_Object_Type__c + &apos;/&apos; + pharos__Related_Id__c + &apos;/view&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object Link</label>
    <type>Text</type>
</CustomField>