force-app/main/default/objects/pharos__Log__c/fields/pharos_Error_Category__c.field-meta.xml
<CustomField>
    <fullName>pharos_Error_Category__c</fullName>
    <label>Pharos Error Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>pharos_Error_Source__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>pharos_Error_Category</valueSetName>
    </valueSet>
</CustomField>