force-app/main/default/objects/pharos__Log__c/fields/pharos_Error_Source__c.field-meta.xml
<CustomField>
    <fullName>pharos_Error_Source__c</fullName>
    <label>Pharos Error Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>pharos_Error_Source</valueSetName>
    </valueSet>
</CustomField>