force-app/main/default/objects/pharos__Log__c/fields/Publish_Immediate_DML_Limit__c.field-meta.xml
<CustomField>
    <fullName>Publish_Immediate_DML_Limit__c</fullName>
    <description>Maximum number of publish immediate DML operations allowed in this transaction</description>
    <label>Publish Immediate DML Limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>