force-app/main/default/objects/pharos__Log__c/fields/ReactTimeHours__c.field-meta.xml
<CustomField>
    <fullName>ReactTimeHours__c</fullName>
    <label>React Time Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>