force-app/main/default/objects/pharos__Log__c/listViews/Duplicate_Logs.listView-meta.xml
<ListView>
    <fullName>Duplicate_Logs</fullName>
    <columns>NAME</columns>
    <columns>ITENumber__c</columns>
    <columns>Account_Name__c</columns>
    <columns>ID_ERP__c</columns>
    <columns>pharos__Created_At__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Name__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Duplicate Logs</label>
</ListView>