force-app/main/default/objects/pharos__Log__c/listViews/RequestDebug.listView-meta.xml
<ListView>
    <fullName>RequestDebug</fullName>
    <columns>NAME</columns>
    <columns>pharos__Area__c</columns>
    <columns>pharos__Summary__c</columns>
    <columns>pharos__Details__c</columns>
    <columns>pharos__Created_At__c</columns>
    <columns>pharos__Type__c</columns>
    <columns>ITENumber__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pharos__Category__c</field>
        <operation>notEqual</operation>
        <value>Pharos Error</value>
    </filters>
    <filters>
        <field>pharos__Type__c</field>
        <operation>contains</operation>
        <value>RequestDebug</value>
    </filters>
    <label>Request Debug</label>
</ListView>